package Constants;

public class Constant {

    public static final String URL = codekey.URL;
    public static final String DRIVER = codekey.DRIVER;
    public static final String LOGO_IMAGE_PATH = "resources/Image/ava.png";
    public static final String NAME_APP = "Dictionary Application";
    public static final String QUESTION_FILE = "resources/Data/BoxQuestions.txt";


    public static final String IMAGE_FIREWORK = "resources/Icons/firework.png";

    public static final String IMAGE_SAD = "resources/Icons/sad.png";

    public static final String MENU_LAYER = "Layers/MenubarLayer.fxml";
    public static final String SEARCH_LAYER = "Layers/SearchLayer.fxml";
    public static final String ADD_WORD_LAYER = "Layers/AddWordLayer.fxml";
    public static final String GAMES_LAYER = "Layers/GamesOverview.fxml";
    public static final String TRANSLATE_LAYER = "Layers/TranslateLayer.fxml";
    public static final String GAME_TESTING = "Layers/GameQuizLayer.fxml";
    public static final String GAME_WORD = "src/resources/Data/game.txt";
    public static final String GAME_UNSCRAMBLE = "Layers/GameUnscramble.fxml";
    public static final String DATA_EV_FILE_PATH = "resources/Data/E_V.txt";
    public static final String DATA_VE_FILE_PATH = "resources/Data/V_E.txt";

    public static final String CORRECT_SOUND = "resources/Audio/correct.mp3";
    public static final String SPLITTING_CHARACTERS = "<html>";
    public static final String INCORRECT_SOUND = "resources/Audio/incorrect.mp3";
    public static final String TABLE_ADD_WORD = "add_word";

}
