package Constants;

public class codekey {
    public static final String DATABASE_NAME = "demo";
    public static final String DATABASE_USER = "root";
    public static final String DATABASE_PASSWORD = "Bigtoken10@";

    public static final String URL = "jdbc:mysql://localhost:3307/" + DATABASE_NAME;
    public static final String DRIVER = "com.mysql.cj.jdbc.Driver";
    public static final String APIKEY = "11e9655235c943cebe3df1a1a7abdb14";

}
